[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluidd-monitor"
version = "0.1.0"
description = "Terminal print monitor for Fluidd / Moonraker"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
]

[project.scripts]
fluidd-monitor = "fluidd_monitor.__main__:main"

[project.urls]
Repository = "https://github.com/your-username/fluidd-monitor"
